--- a/explore_objects_and_places.ipynb
+++ b/explore_objects_and_places.ipynb
@@ -646,15 +646,15 @@
        "Place of Origin                       9\n",
        "place made                            6\n",
        "Associated Place                      5\n",
-       "Place of conversion                   4\n",
-       "Place of death                        4\n",
        "Place assembled                       4\n",
-       "Place Collected                       2\n",
+       "Place of death                        4\n",
+       "Place of conversion                   4\n",
        "Place of birth                        2\n",
-       "Place of Execution                    1\n",
+       "Place Collected                       2\n",
        "Place of Use                          1\n",
-       "place of Publication                  1\n",
        "Place of Publication                  1\n",
+       "place of Publication                  1\n",
+       "Place of Execution                    1\n",
        "Name: spatial_roleName, dtype: int64"
       ]
      },
@@ -701,8 +701,8 @@
        "Place of conversion                  4\n",
        "Place assembled                      4\n",
        "Place of Execution                   1\n",
-       "Place of Publication                 1\n",
        "place of Publication                 1\n",
+       "Place of Publication                 1\n",
        "Name: spatial_roleName, dtype: int64"
       ]
      },
@@ -1069,17 +1069,17 @@
     {
      "data": {
       "text/plain": [
-       "Australia                           2954\n",
-       "United Kingdom                       185\n",
-       "United States                        139\n",
-       "Papua New Guinea                      77\n",
-       "Italy                                 38\n",
-       "                                    ... \n",
-       "Niger                                  1\n",
-       "Nauru                                  1\n",
-       "Lao People's Democratic Republic       1\n",
-       "Kuwait                                 1\n",
-       "Cuba                                   1\n",
+       "Australia                  2954\n",
+       "United Kingdom              185\n",
+       "United States               139\n",
+       "Papua New Guinea             77\n",
+       "Italy                        38\n",
+       "                           ... \n",
+       "Cocos (Keeling) Islands       1\n",
+       "Cambodia                      1\n",
+       "Ghana                         1\n",
+       "Pakistan                      1\n",
+       "                              1\n",
        "Name: country, Length: 126, dtype: int64"
       ]
      },
