Add zipped data file

--- a/explore_collection_object_over_time.ipynb
+++ b/explore_collection_object_over_time.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "[See here](exploring_object_records.ipynb) for an introduction to the `object` data, and [here to explore places](explore_objects_and_places.ipynb) associated with objects.\n",
     "\n",
-    "If you haven't already, you'll need to [harvest the `object` data](harvest_records.ipynb) first."
+    "If you haven't already, you'll either need to [harvest the `object` data](harvest_records.ipynb), or [unzip a pre-harvested dataset](unzip_preharvested_data.ipynb)."
    ]
   },
   {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "4  Financial document from Tirranna Picnic Race C...       [Financial records]  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
