--- a/explore_objects_and_places.ipynb
+++ b/explore_objects_and_places.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "[See here](exploring_object_records.ipynb) for an introduction to the `object` data, and [here to explore objects over time](explore_collection_object_over_time.ipynb).\n",
     "\n",
-    "If you haven't already, you'll need to [harvest the `object` data](harvest_records.ipynb) first."
+    "If you haven't already, you'll either need to [harvest the `object` data](harvest_records.ipynb), or [unzip a pre-harvested dataset](unzip_preharvested_data.ipynb)."
    ]
   },
   {
