--- a/exploring_object_records.ipynb
+++ b/exploring_object_records.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "In this notebook we'll have a preliminary poke around in the `object` data harvested from the [NMA Collection API](https://www.nma.gov.au/about/our-collection/our-apis). I'll focus here on the basic shape/stats of the data, other notebooks will explore the object data over [time](explore_collection_object_over_time.ipynb) and [space](explore_objects_and_places.ipynb).\n",
     "\n",
-    "If you haven't already, you'll need to [harvest the `object` data](harvest_records.ipynb) first.\n",
+    "If you haven't already, you'll either need to [harvest the `object` data](harvest_records.ipynb), or [unzip a pre-harvested dataset](unzip_preharvested_data.ipynb).\n",
     "\n",
     "* [The shape of the data](#The-shape-of-the-data)\n",
     "* [Nested data](#Nested-data)\n",
