Add links to Binder

--- a/explore_collection_object_over_time.ipynb
+++ b/explore_collection_object_over_time.ipynb
@@ -31,7 +31,7 @@
     "    </ul>\n",
     "</p>\n",
     "\n",
-    "<p><b>Is this thing on?</b> If you can't edit or run any of the code cells, you might be viewing a static (read only) version of this notebook. Click here to <a href=\"https://mybinder.org/v2/gh/GLAM-Workbench/trove-newspapers/master?filepath=visualise-searches-over-time.ipynb\">load a <b>live</b> version</a> running on Binder.</p>\n",
+    "<p><b>Is this thing on?</b> If you can't edit or run any of the code cells, you might be viewing a static (read only) version of this notebook. Click here to <a href=\"https://mybinder.org/v2/gh/GLAM-Workbench/national-museum-australia/master?urlpath=lab%2Ftree%2Fexplore_objects_and_places.ipynb\">load a <b>live</b> version</a> running on Binder.</p>\n",
     "\n",
     "</div>"
    ]
